--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,14 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow-y: scroll;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
